Version Next

    - Changed VaadinConfigurable.ifSessionNotLocked default to EXCEPTION
    - Revert previous change to VaadinUtil.invokeLater() (issue #19)
    - Fix bug in Primitive.FLOAT and Primitive.LONG parse pattern
    - Added ParseContext.tryPattern(), equals(), and hashCode()

Version 1.0.882 Released May 6, 2014

    - Moved XMLResultSetWriter from xml -> sql sub-package
    - Remove HardLink; obsoleted by Files.createLink()
    - Remove unnecessary parameter to VaadinApplicationListener
      NOTE: the above are backward-incompatible changes
    - Fix bug: VaadinUtil.invokeLater() was sometimes synchronous
    - Allow container SimpleItem's to be modified from "below"
    - Added StreamWriterAction
    - Added Connectable
    - Minor bug fixes

Version 1.0.850 Released March 19, 2014

    - Update build target to Java 7
    - Added Primitive.parsePattern(), Primitive.compare(), and Primitive.VOID
    - Genericize Primitive (no longer extend Enum)
    - DoubleFormat removed; use Primitive.DOUBLE instead
    - Improve AnnotatedXMLEvent{Reader,Writer} subclass API
    - Generalize MethodAnnotationScanner to make it more useful
      NOTE: the above are backward-incompatible changes
    - Added StreamWriterDelegate and EventWriterDelegate
    - Added IndentXMLStreamWriter and EmptyTagXMLStreamWriter
    - Added AnnotatedXMLStreamReader and AnnotatedXMLStreamWriter
    - Fixed a couple of obscure bugs in StringEncoder
    - Add Vaadin 6 portlet portability fix (issue #4)

Version 1.0.794 Released December 11, 2013

    - Renamed SpringVaadinSession -> SpringVaadinSessionListener
      NOTE: the above are backward-incompatible changes
    - Add new servlet init params "sessionTracking" and "maxSessions"
    - Added VaadinSessionContainer
    - Added MergedResultSet
    - Added PersistentObjectTransactionManager and @PersistentObjectTransactional
    - Added ProcessRunner.handleInterruption()
    - Added SortingPropertyExtractor